[gd_scene load_steps=31 format=2]

[ext_resource path="res://2D Pixel Dungeon Asset Pack/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tela Inicial/TelaInicial.gd" type="Script" id=2]
[ext_resource path="res://2D Pixel Dungeon Asset Pack/Dungeon_Tileset_at.png" type="Texture" id=3]
[ext_resource path="res://2D Pixel Dungeon Asset Pack/kenney_rpg-urban-pack/Tiles/tile_0024.png" type="Texture" id=4]
[ext_resource path="res://itens/numero(+1).tscn" type="PackedScene" id=5]
[ext_resource path="res://itens/numero(+4).tscn" type="PackedScene" id=6]
[ext_resource path="res://itens/numero(+2).tscn" type="PackedScene" id=7]
[ext_resource path="res://itens/numero(+3).tscn" type="PackedScene" id=8]
[ext_resource path="res://itens/numero(-1).tscn" type="PackedScene" id=9]
[ext_resource path="res://itens/numero(-2).tscn" type="PackedScene" id=10]
[ext_resource path="res://itens/numero(-3).tscn" type="PackedScene" id=11]
[ext_resource path="res://itens/numero(-4).tscn" type="PackedScene" id=12]
[ext_resource path="res://itens/numero(+5).tscn" type="PackedScene" id=13]
[ext_resource path="res://itens/numero(-5).tscn" type="PackedScene" id=14]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="NavigationPolygon" id=14]
vertices = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 ) ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="NavigationPolygon" id=15]
vertices = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 ) ]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=13]
0/name = "Dungeon_Tileset_at.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 224, 192, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Dungeon_Tileset_at.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 288, 256, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 14 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Dungeon_Tileset_at.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 224, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 15 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Dungeon_Tileset_at.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 288, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Dungeon_Tileset_at.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 384, 192, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Dungeon_Tileset_at.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 384, 320, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Dungeon_Tileset_at.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 416, 320, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Dungeon_Tileset_at.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 288, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Dungeon_Tileset_at.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 160, 288, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Dungeon_Tileset_at.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 320, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Dungeon_Tileset_at.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 160, 320, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 2 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Dungeon_Tileset_at.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 480, 192, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 3 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "Dungeon_Tileset_at.png 12"
12/texture = ExtResource( 3 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 480, 224, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 4 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "Dungeon_Tileset_at.png 13"
13/texture = ExtResource( 3 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 160, 352, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 5 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "Dungeon_Tileset_at.png 14"
14/texture = ExtResource( 3 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 160, 384, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 6 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "Dungeon_Tileset_at.png 15"
15/texture = ExtResource( 3 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 256, 224, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Dungeon_Tileset_at.png 16"
16/texture = ExtResource( 3 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 288, 256, 32, 32 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Dungeon_Tileset_at.png 17"
17/texture = ExtResource( 3 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 192, 288, 32, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 1 )

[node name="TelaInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 13 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 7, 0, 1, 6, 0, 2, 6, 0, 3, 5, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 5, 0, 11, 6, 0, 12, 6, 0, 13, 5, 0, 14, 6, 0, 15, 6, 0, 16, 5, 0, 17, 6, 0, 18, 5, 0, 19, 5, 0, 20, 6, 0, 21, 5, 0, 22, 6, 0, 23, 6, 0, 24, 5, 0, 25, 6, 0, 26, 5, 0, 27, 6, 0, 28, 5, 0, 29, 6, 0, 30, 6, 0, 31, 8, 0, 65536, 11, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 14, 0, 131072, 12, 0, 131073, 1, 0, 131074, 7, 0, 131075, 6, 0, 131076, 5, 0, 131077, 6, 0, 131078, 6, 0, 131079, 5, 0, 131080, 6, 0, 131081, 5, 0, 131082, 6, 0, 131083, 5, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 5, 0, 131088, 6, 0, 131089, 5, 0, 131090, 6, 0, 131091, 6, 0, 131092, 5, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 5, 0, 131097, 5, 0, 131098, 5, 0, 131099, 6, 0, 131100, 5, 0, 131101, 8, 0, 131102, 1, 0, 131103, 13, 0, 196608, 11, 0, 196609, 1, 0, 196610, 12, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 14, 0, 196638, 1, 0, 196639, 13, 0, 262144, 11, 0, 262145, 1, 0, 262146, 11, 0, 262147, 1, 0, 262148, 7, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 6, 0, 262155, 5, 0, 262156, 6, 0, 262157, 6, 0, 262158, 5, 0, 262159, 6, 0, 262160, 5, 0, 262161, 6, 0, 262162, 6, 0, 262163, 6, 0, 262164, 6, 0, 262165, 6, 0, 262166, 5, 0, 262167, 5, 0, 262168, 6, 0, 262169, 5, 0, 262170, 5, 0, 262171, 8, 0, 262172, 1, 0, 262173, 13, 0, 262174, 1, 0, 262175, 14, 0, 327680, 11, 0, 327681, 1, 0, 327682, 12, 0, 327683, 1, 0, 327684, 11, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 14, 0, 327708, 1, 0, 327709, 14, 0, 327710, 1, 0, 327711, 14, 0, 393216, 12, 0, 393217, 1, 0, 393218, 11, 0, 393219, 1, 0, 393220, 11, 0, 393221, 1, 0, 393222, 7, 0, 393223, 8, 0, 393224, 1, 0, 393225, 7, 0, 393226, 8, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 7, 0, 393238, 5, 0, 393239, 5, 0, 393240, 5, 0, 393241, 8, 0, 393242, 1, 0, 393243, 13, 0, 393244, 1, 0, 393245, 13, 0, 393246, 1, 0, 393247, 13, 0, 458752, 12, 0, 458753, 1, 0, 458754, 12, 0, 458755, 1, 0, 458756, 12, 0, 458757, 1, 0, 458758, 11, 0, 458759, 13, 0, 458760, 1, 0, 458761, 11, 0, 458762, 13, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 11, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 13, 0, 458778, 1, 0, 458779, 14, 0, 458780, 1, 0, 458781, 13, 0, 458782, 1, 0, 458783, 14, 0, 524288, 12, 0, 524289, 1, 0, 524290, 12, 0, 524291, 1, 0, 524292, 11, 0, 524293, 1, 0, 524294, 5, 0, 524295, 5, 0, 524296, 1, 0, 524297, 5, 0, 524298, 5, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 1, 0, 524315, 13, 0, 524316, 1, 0, 524317, 13, 0, 524318, 1, 0, 524319, 14, 0, 589824, 11, 0, 589825, 1, 0, 589826, 11, 0, 589827, 1, 0, 589828, 11, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 14, 0, 589852, 1, 0, 589853, 13, 0, 589854, 1, 0, 589855, 13, 0, 655360, 12, 0, 655361, 1, 0, 655362, 12, 0, 655363, 1, 0, 655364, 11, 0, 655365, 1, 0, 655366, 7, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 8, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 7, 0, 655382, 8, 0, 655383, 1, 0, 655384, 7, 0, 655385, 8, 0, 655386, 1, 0, 655387, 13, 0, 655388, 1, 0, 655389, 13, 0, 655390, 1, 0, 655391, 13, 0, 720896, 11, 0, 720897, 1, 0, 720898, 12, 0, 720899, 1, 0, 720900, 12, 0, 720901, 1, 0, 720902, 11, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 13, 0, 720907, 1, 0, 720908, 1, 0, 720909, 5, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 5, 0, 720915, 1, 0, 720916, 1, 0, 720917, 11, 0, 720918, 13, 0, 720919, 1, 0, 720920, 11, 0, 720921, 13, 0, 720922, 1, 0, 720923, 13, 0, 720924, 1, 0, 720925, 14, 0, 720926, 1, 0, 720927, 14, 0, 786432, 11, 0, 786433, 1, 0, 786434, 12, 0, 786435, 1, 0, 786436, 11, 0, 786437, 1, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 1, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 1, 0, 786448, 1, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 1, 0, 786453, 5, 0, 786454, 5, 0, 786455, 1, 0, 786456, 5, 0, 786457, 5, 0, 786458, 1, 0, 786459, 13, 0, 786460, 1, 0, 786461, 13, 0, 786462, 1, 0, 786463, 13, 0, 851968, 12, 0, 851969, 1, 0, 851970, 11, 0, 851971, 1, 0, 851972, 11, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 14, 0, 851996, 1, 0, 851997, 14, 0, 851998, 1, 0, 851999, 13, 0, 917504, 11, 0, 917505, 1, 0, 917506, 11, 0, 917507, 1, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917532, 1, 0, 917533, 13, 0, 917534, 1, 0, 917535, 14, 0, 983040, 12, 0, 983041, 1, 0, 983042, 11, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 14, 0, 983070, 1, 0, 983071, 13, 0, 1048576, 11, 0, 1048577, 1, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, 4, 0, 1048601, 4, 0, 1048602, 4, 0, 1048603, 4, 0, 1048604, 4, 0, 1048605, 4, 0, 1048606, 1, 0, 1048607, 14, 0, 1114112, 11, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 13, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 4, 0, 1179651, 4, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 4, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 4, 0 )

[node name="personagem" type="Sprite" parent="TileMap"]
position = Vector2( 513, 367 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="numero(-5)" parent="TileMap/personagem" instance=ExtResource( 14 )]
position = Vector2( 163.5, 32.5 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(-4)" parent="TileMap/personagem" instance=ExtResource( 12 )]
position = Vector2( 129.5, 32.5 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(-3)" parent="TileMap/personagem" instance=ExtResource( 11 )]
position = Vector2( 93.5, 32.5 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(-2)" parent="TileMap/personagem" instance=ExtResource( 10 )]
position = Vector2( 54.5, 33 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(-1)" parent="TileMap/personagem" instance=ExtResource( 9 )]
position = Vector2( 18, 33 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(+5)" parent="TileMap/personagem" instance=ExtResource( 13 )]
position = Vector2( -24.5, 34 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(+4)" parent="TileMap/personagem" instance=ExtResource( 6 )]
position = Vector2( -63.5, 34 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(+3)" parent="TileMap/personagem" instance=ExtResource( 8 )]
position = Vector2( -100.5, 33.5 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(+1)" parent="TileMap/personagem" instance=ExtResource( 5 )]
position = Vector2( -166, 33 )
scale = Vector2( 0.5, 0.5 )

[node name="numero(+2)" parent="TileMap/personagem" instance=ExtResource( 7 )]
position = Vector2( -136.5, 34 )
scale = Vector2( 0.5, 0.5 )

[node name="controles" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -43.0
margin_right = 86.0
margin_bottom = 43.0

[node name="iniciarBTN" type="Button" parent="controles"]
margin_right = 172.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../QuitBtn")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.854902, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.968627, 0.556863, 0.0313726, 1 )
custom_fonts/font = SubResource( 16 )
text = "Jogar"

[node name="ControlesBTN" type="Button" parent="controles"]
margin_top = 26.0
margin_right = 172.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.854902, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.968627, 0.556863, 0.0313726, 1 )
custom_fonts/font = SubResource( 16 )
text = "Controles"

[node name="QuitBtn" type="Button" parent="controles"]
margin_top = 52.0
margin_right = 172.0
margin_bottom = 74.0
focus_neighbour_bottom = NodePath("../iniciarBTN")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.854902, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.968627, 0.556863, 0.0313726, 1 )
custom_fonts/font = SubResource( 16 )
text = "Sair"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_top = 184.0
margin_right = -26.0
margin_bottom = 219.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 16 )
text = "Mat-Man
"

[connection signal="pressed" from="controles/iniciarBTN" to="." method="_on_iniciarBTN_pressed"]
[connection signal="pressed" from="controles/ControlesBTN" to="." method="_on_ControlesBTN_pressed"]
[connection signal="pressed" from="controles/QuitBtn" to="." method="_on_QuitBtn_pressed"]
